Movie Distortion and Bilateral Blur doesn't work together #34182

Closed
opened 2013-02-09 19:39:16 +01:00 by Sebastian Koenig · 6 comments

%%%--- Operating System, Graphics card ---

OSX 10.8.2, GT120
- Blender version with error, and version that worked ---
r54389

- Short description of error ---

Movie Distortion and Bilateral Blur doesn't work together, it produces artifacts.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

just check the composite in the attached file. a movie-distortion-node set to distort produces wrong results, if there is a bilateral blur before.
%%%

%%%--- Operating System, Graphics card --- OSX 10.8.2, GT120 - Blender version with error, and version that worked --- r54389 - Short description of error --- Movie Distortion and Bilateral Blur doesn't work together, it produces artifacts. - Steps for others to reproduce the error (preferably based on attached .blend file) --- just check the composite in the attached file. a movie-distortion-node set to distort produces wrong results, if there is a bilateral blur before. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Seems like when you hit f12, the result is correct, just not correct in the viewernode preview.%%%

%%%Seems like when you hit f12, the result is correct, just not correct in the viewernode preview.%%%

%%%Will check on this.%%%

%%%Will check on this.%%%

%%%Re-assigning to Jeroen. Seems to be something about scheduling of tiles or so. Maybe Distort node shall be converted to complex operation, not sure.
This is not just an issue of Bilateral, any blur would cause issues here.%%%

%%%Re-assigning to Jeroen. Seems to be something about scheduling of tiles or so. Maybe Distort node shall be converted to complex operation, not sure. This is not just an issue of Bilateral, any blur would cause issues here.%%%
Member

%%%Fixed in revision 54600.

Added area of interest for the movie distortion node based on a radius around the input tile. It should be sufficient for most common cases.
Please test.

%%%

%%%Fixed in revision 54600. Added area of interest for the movie distortion node based on a radius around the input tile. It should be sufficient for most common cases. Please test. %%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34182
No description provided.