Fix for [#34182] Movie Distortion and Bilateral Blur doesn't work together

* added area of interest based on a radius around the input tile.
If someone can implement a correct formula (based on K1, K2 and K3) and send it to me, I will be happy to apply it!

 - At Mind -